[package]
name = "EXP_Rust_Monitoring_Client"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
ferris-says = "0.3.1"
pad = "0.1.6"
serde_json = "1.0.149"
sysinfo = "0.38.2"
tokio = {version = "1.49.0", features=["full"]}
rust_decimal = {version = "1.40.0", features = ["macros"]}
serde = {version = "1.0.228", features = ["derive"]}
dotenvy = "0.15.7"
